feat: add user instruction note in the UI section of index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
       }
     </style>
     <div id="app">
-      <div id="ui"></div>
+      <div id="ui">
+        <div id="note">Tap/Click around to move</div>
+      </div>
       <canvas id="game"> </canvas>
     </div>
     <script type="module" src="/src/main.js"></script>
