fix: correct note element ID to class for consistency in index.html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </style>
     <div id="app">
       <div id="ui">
-        <div id="note">Tap/Click around to move</div>
+        <div class="note">Tap/Click around to move</div>
       </div>
       <canvas id="game"> </canvas>
     </div>
