fix: remove comment placeholder for clarity in index.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <div id="app">
       <div id="ui">
         <div class="note">Tap/Click around to move</div>
+        // On Progress
       </div>
       <canvas id="game"> </canvas>
     </div>
