Add font monogram

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <style>
+      @font-face {
+        font-family: monogram;
+        src: url(monogram.ttf);
+      }
       #app {
         width: 100%;
         height: 100%;
