--- a/index.html
+++ b/index.html
@@ -11,11 +11,16 @@
       @font-face {
         font-family: monogram;
         src: url(monogram.ttf);
+        overflow: hidden;
+      }
+      body{
+        font-family: monogram, monospace;
+        font-size: 2rem;
       }
       #app {
         width: 100%;
         height: 100%;
-        overflow: hidden;
+        position: relative;
       }
     </style>
     <div id="app">
