--- a/index.html
+++ b/index.html
@@ -22,6 +22,13 @@
         height: 100%;
         position: relative;
       }
+      #textposition {
+        position: absolute;
+        left: 10%;
+        right: 10%;
+        bottom: 2vh;
+      }
+      
     </style>
     <div id="app">
       <div id="ui">
