--- a/index.html
+++ b/index.html
@@ -27,8 +27,19 @@
         left: 10%;
         right: 10%;
         bottom: 2vh;
+        min-height: 10vh;
+        background: white;
+        border-radius: 3px;
+        outline-style: solid;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        
+
       }
-      
+
     </style>
     <div id="app">
       <div id="ui">
