--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         flex-direction: column;
         flex-wrap: wrap;
         justify-content: flex-start;
+        align-items: flex-start;
         
 
       }
