Add word-spacing to text position styles

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         flex-wrap: wrap;
         justify-content: flex-start;
         align-items: flex-start;
+        word-spacing: 0.2rem;
         
 
       }
