--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         justify-content: flex-start;
         align-items: flex-start;
         word-spacing: 0.2rem;
+        filter: drop-shadow(0 0 0.75rem rgba(112, 112, 112));
         
 
       }
