Refactor CSS for text position styles to improve structure and readability

--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
         align-items: flex-start;
         word-spacing: 0.2rem;
         filter: drop-shadow(0 0 0.75rem rgba(112, 112, 112));
-        
-
+      }
+      .ui-text {
+        margin: 0;
+        user-select: none;
       }
 
     </style>
