Add styles for close button in UI

--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         margin: 0;
         user-select: none;
       }
+      .ui-close-btn {
+        font-family: inherit;
+        font-size: inherit;
+        border-style: none;
+        border-radius: 3px;
+        padding: 1rem;
+      }
 
     </style>
     <div id="app">
