Add styles for button container alignment in index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,10 @@
         border-radius: 3px;
         padding: 1rem;
       }
-
+      .btn-container {
+        align-self: flex-end;
+        margin-top: 1rem;
+      }
 
 
 
