Add styles for note position in index.html

--- a/index.html
+++ b/index.html
@@ -56,7 +56,14 @@
         margin-top: 1rem;
       }
 
-
+      .note {
+        position: absolute;
+        top: 1vh;
+        left: 5%;
+        display: flex;
+        flex-direction: column;
+        color: rgb(238, 238, 238)
+      }
 
     </style>
     <div id="app">
