Fix ID reference for textbox in HTML structure

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         height: 100%;
         position: relative;
       }
-      #textposition {
+      #textbox {
         position: absolute;
         left: 10%;
         right: 10%;
